--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,27 +18,54 @@
         <!-- Página 1 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textPage1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Página 1"
-                android:textSize="24sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/btnNextPage1" />
+            android:layout_height="match_parent"
+            android:background="#CCC2C2">
 
             <Button
-                android:id="@+id/btnNextPage1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Próxima Página"
+                android:id="@+id/button_new_user"
+                android:layout_width="0dp"
+                android:layout_height="92dp"
+                android:background="@drawable/rouded_button"
+                android:text="New User"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/button_load_user"
+                app:layout_constraintEnd_toEndOf="@+id/button_load_user"
+                app:layout_constraintStart_toStartOf="@+id/button_load_user"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_load_user"
+                android:layout_width="184dp"
+                android:layout_height="87dp"
+                android:layout_marginEnd="107dp"
+                android:background="@drawable/rouded_button"
+                android:text="Load User"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="16dp" />
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/button_new_user" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="0dp"
+                android:layout_height="252dp"
+                android:layout_marginStart="65dp"
+                android:layout_marginEnd="65dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_load_user"
+                app:layout_constraintHorizontal_bias="0.169"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.496"
+                app:srcCompat="@drawable/cat2" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- Página 2 -->
