--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
 
         <!-- Página 1 -->
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pag_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#CCC2C2">
@@ -70,28 +71,35 @@
 
         <!-- Página 2 -->
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pag_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textPage2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Página 2"
-                android:textSize="24sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="New User"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/btnPrevPage2" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btnPrevPage2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="16dp"
                 android:text="Página Anterior"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_margin="16dp" />
+                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ViewFlipper>
 </androidx.constraintlayout.widget.ConstraintLayout>
