--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,16 +8,6 @@
     tools:context=".MainActivity">
 
     <!-- ViewFlipper -->
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="79dp"
-        android:layout_height="41dp"
-        android:background="@drawable/rouded_button"
-        android:gravity="center"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="231dp" />
 
     <ViewFlipper
         android:id="@+id/viewFlipper"
@@ -27,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Página 1 -->
-        <!--<androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,7 +70,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!- Página 2 -->
+        <!-- Página 2 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_2"
             android:layout_width="match_parent"
@@ -91,19 +81,32 @@
                 android:id="@+id/label_new_user"
                 android:layout_width="694dp"
                 android:layout_height="38dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="21dp"
+                android:layout_marginBottom="13dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="New User"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="4dp" />
+                app:layout_constraintBottom_toTopOf="@+id/scrollView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ScrollView
+                android:id="@+id/scrollView4"
                 android:layout_width="681dp"
                 android:layout_height="292dp"
-                tools:layout_editor_absoluteX="24dp"
-                tools:layout_editor_absoluteY="55dp">
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="26dp"
+                android:layout_marginBottom="64dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/label_new_user">
 
                 <!-- LinearLayout dentro do ScrollView -->
                 <LinearLayout
@@ -120,6 +123,7 @@
                         android:ems="10"
                         android:hint="Call"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_name"
                         style="@style/text_new_user"
@@ -128,6 +132,7 @@
                         android:ems="10"
                         android:hint="Name"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_address"
                         style="@style/text_new_user"
@@ -136,6 +141,7 @@
                         android:ems="10"
                         android:hint="Address"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_city"
                         style="@style/text_new_user"
@@ -144,6 +150,7 @@
                         android:ems="10"
                         android:hint="City"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_state"
                         style="@style/text_new_user"
@@ -152,6 +159,7 @@
                         android:ems="10"
                         android:hint="State"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_zip"
                         style="@style/text_new_user"
@@ -160,6 +168,7 @@
                         android:ems="10"
                         android:hint="ZIP"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_country"
                         style="@style/text_new_user"
@@ -168,6 +177,7 @@
                         android:ems="10"
                         android:hint="Country"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_grid_square"
                         style="@style/text_new_user"
@@ -176,6 +186,7 @@
                         android:ems="10"
                         android:hint="Grid Square"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_arrl_section"
                         style="@style/text_new_user"
@@ -184,6 +195,7 @@
                         android:ems="10"
                         android:hint="ARRL Section"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_club"
                         style="@style/text_new_user"
@@ -192,6 +204,7 @@
                         android:ems="10"
                         android:hint="Club"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_cq_zone"
                         style="@style/text_new_user"
@@ -200,6 +213,7 @@
                         android:ems="10"
                         android:hint="CQ Zone"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_itu_zone"
                         style="@style/text_new_user"
@@ -208,6 +222,7 @@
                         android:ems="10"
                         android:hint="ITU Zone"
                         android:inputType="text" />
+
                     <EditText
                         android:id="@+id/editText_new_user_email"
                         style="@style/text_new_user"
@@ -215,20 +230,10 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="E-Mail"
-                        android:inputType="text" />
+                        android:inputType="textEmailAddress" />
                 </LinearLayout>
             </ScrollView>
 
-
-
-
-            <Button
-                android:id="@+id/btnPrevPage2"
-                android:layout_width="172dp"
-                android:layout_height="37dp"
-                android:text="Página Anterior"
-                tools:layout_editor_absoluteX="519dp"
-                tools:layout_editor_absoluteY="358dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ViewFlipper>
