as constrains do new user foram acertadas

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,12 +12,10 @@
     <ViewFlipper
         android:id="@+id/viewFlipper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
         <!-- Página 1 -->
-            <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -79,18 +77,16 @@
 
             <TextView
                 android:id="@+id/label_new_user"
-                android:layout_width="0dp"
-                android:layout_height="38dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="13dp"
+                android:layout_width="115dp"
+                android:layout_height="33dp"
+                android:layout_marginStart="308dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="308dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="New User"
                 android:textColor="#FFFFFF"
-                android:textSize="30sp"
-                app:layout_constraintBottom_toTopOf="@+id/scrollView4"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -98,12 +94,12 @@
             <ScrollView
                 android:id="@+id/scrollView4"
                 android:layout_width="671dp"
-                android:layout_height="282dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="26dp"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="250dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="21dp"
+                app:layout_constraintBottom_toTopOf="@+id/button_save_user"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_new_user">
@@ -239,31 +235,27 @@
                 android:id="@+id/button_save_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="508dp"
-                android:layout_marginTop="7dp"
-                android:layout_marginEnd="180dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginStart="373dp"
+                android:layout_marginEnd="102dp"
+                android:layout_marginBottom="11dp"
                 android:background="@drawable/rouded_button"
                 android:text="Save User"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/button_cancel_save_user"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
+                app:layout_constraintStart_toEndOf="@+id/button_cancel_save_user" />
 
             <Button
                 android:id="@+id/button_cancel_save_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
-                android:layout_marginTop="7dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginBottom="11dp"
                 android:background="@drawable/rouded_button"
                 android:text="Cancel"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
+                app:layout_constraintStart_toStartOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
